# LMD-Fixer

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
lmd_fixer/: app.py  cli.py  gcode.py  pipeline.py
lmd_fixer/fixes/: __init__.py  example_fix.py  flag_dwells.py  remove_dwells.py  remove_named_sections.py  remove_repeated_p_calls.py  remove_rotary_table.py
lmd_fixer/tests/: O1140 - Original.ptp  O1140.ptp  O1145.ptp
