[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lmd-fixer"
version = "0.1.0"
description = "Reviewable clean-up of laser metal deposition (LMD) G-code/PTP programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
]

[project.scripts]
lmd-fixer = "lmd_fixer.cli:main"

[tool.setuptools.packages.find]
include = ["lmd_fixer*"]
exclude = ["lmd_fixer.tests*"]
